[gd_scene load_steps=5 format=2]

[ext_resource path="res://lobby.gd" type="Script" id=1]
[ext_resource path="res://host_button.gd" type="Script" id=2]
[ext_resource path="res://join_button.gd" type="Script" id=3]
[ext_resource path="res://name_input.gd" type="Script" id=4]

[node name="lobby" type="Node2D"]
script = ExtResource( 1 )

[node name="host_button" type="Button" parent="."]
margin_left = 20.0
margin_top = 20.0
text = "Host"
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="join_button" type="Button" parent="."]
margin_left = 20.0
margin_top = 50.0
text = "Join clipboard IP"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="invalid_ip_popup" type="AcceptDialog" parent="join_button"]
margin_left = 71.4641
margin_top = 39.6232
margin_right = 154.464
margin_bottom = 97.6232
window_title = "Error"
dialog_text = "Invalid IP."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="name_input" type="Control" parent="."]
visible = false
margin_left = 20.0399
margin_top = 83.5306
margin_right = 60.0399
margin_bottom = 123.531
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="label" type="Label" parent="name_input"]
text = "Enter a name:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="accept" type="Button" parent="name_input"]
margin_left = 147.998
margin_top = 22.4739
margin_right = 178.998
margin_bottom = 42.4739
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="input" type="LineEdit" parent="name_input"]
margin_top = 20.0
margin_right = 144.0
margin_bottom = 44.0
max_length = 16
placeholder_text = "Name"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="invalid_name_popup" type="AcceptDialog" parent="name_input"]
margin_left = 23.7856
margin_top = -17.6051
margin_right = 126.786
margin_bottom = 40.3954
dialog_text = "Invalid name."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="players_label" type="Label" parent="."]
margin_left = 241.831
margin_top = 37.4767
margin_right = 287.831
margin_bottom = 51.4767
text = "players"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="players" type="ItemList" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 244.697
margin_top = 55.0006
margin_right = 429.697
margin_bottom = 176.001
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start_button" type="Button" parent="."]
margin_left = 24.9696
margin_top = 192.569
margin_right = 107.97
margin_bottom = 212.569
disabled = true
text = "Start Game"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="host_button" to="host_button" method="_on_host_button_pressed"]
[connection signal="pressed" from="join_button" to="join_button" method="_on_join_button_pressed"]
